[package]
name = "radios2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
strum_macros = "0.24.3"
strum = { version = "0.24", features = ["derive"] }

[build-dependencies]
bindgen = "0.64.0"